--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,16 @@
-anndata                  0.9.2
-blinker                  1.8.2
-certifi                  2024.7.4
-charset-normalizer       3.3.2
-click                    8.1.7
-community                1.0.0b1
-contourpy                1.1.1
-cycler                   0.12.1
-Deprecated               1.2.14
-filelock                 3.15.4
-Flask                    3.0.3
-fonttools                4.53.1
-fsspec                   2024.6.1
-get-annotations          0.1.2
-h5py                     3.11.0
-idna                     3.7
-igraph                   0.11.6
-importlib_metadata       8.2.0
-importlib_resources      6.4.0
-itsdangerous             2.2.0
-Jinja2                   3.1.4
-joblib                   1.4.2
-kiwisolver               1.4.5
-leidenalg                0.10.2
-llvmlite                 0.41.1
-louvain                  0.8.2
-MarkupSafe               2.1.5
-matplotlib               3.7.5
-mpmath                   1.3.0
-munkres                  1.1.4
-natsort                  8.4.0
-networkx                 3.1
-numba                    0.58.1
-numpy                    1.24.4
-nvidia-cublas-cu12       12.1.3.1
-nvidia-cuda-cupti-cu12   12.1.105
-nvidia-cuda-nvrtc-cu12   12.1.105
-nvidia-cuda-runtime-cu12 12.1.105
-nvidia-cudnn-cu12        9.1.0.70
-nvidia-cufft-cu12        11.0.2.54
-nvidia-curand-cu12       10.3.2.106
-nvidia-cusolver-cu12     11.4.5.107
-nvidia-cusparse-cu12     12.1.0.106
-nvidia-nccl-cu12         2.20.5
-nvidia-nvjitlink-cu12    12.6.20
-nvidia-nvtx-cu12         12.1.105
-packaging                24.1
-pandas                   2.0.3
-patsy                    0.5.6
-pexpect                  4.9.0
-pillow                   10.4.0
-pip                      24.2
-ptyprocess               0.7.0
-pydot                    3.0.1
-pyinotify                0.9.6
-pynndescent              0.5.13
-pyparsing                3.1.2
-python-dateutil          2.9.0.post0
-pytz                     2024.1
-requests                 2.32.3
-scanpy                   1.9.8
-scib                     1.1.5
-scikit-learn             1.3.2
-scikit-misc              0.2.0
-scipy                    1.10.1
-scpy                     1.1.4
-seaborn                  0.13.2
-session-info             1.0.0
-setuptools               72.1.0
-six                      1.16.0
-statsmodels              0.14.1
-stdlib-list              0.10.0
-sympy                    1.13.1
-texttable                1.7.0
-threadpoolctl            3.5.0
-torch                    2.4.0
-tqdm                     4.66.5
-triton                   3.0.0
-typing_extensions        4.12.2
-tzdata                   2024.1
-umap-learn               0.5.6
-urllib3                  2.2.2
-Werkzeug                 3.0.3
-wheel                    0.44.0
-wrapt                    1.16.0
-zipp                     3.19.2
+anndata==0.9.2
+#h5py==3.11.0
+community==1.0.0b1
+idna==3.7
+igraph==0.11.6
+louvain==0.8.2
+matplotlib==3.7.5
+numpy==1.24.4
+packaging==24.1
+pandas==2.0.3
+scanpy==1.9.8
+scikit-learn==1.3.2
+scipy==1.10.1
+torch==2.4.0
+tqdm==4.66.5
+munkres==1.1.4
